--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     transition: all .3s;
 }
 
+.underline {
+    border-bottom: #000 solid 1px;
+}
+
 .personal-info {
     border-bottom: #b0cfe9 solid 2px;
 }
